2010-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/ScintillaGTK.cxx:
   Backport Scintilla HG fix: Remove styling idle in destructor to
   avoid crashing when idle called after ScintillaGTK instance
   destroyed (fixes #3111058).
   This prevents a crash when closing a modified document (usually
   without a trailing newline) and choosing Save.


2010-12-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Warn about file truncation if unsafe file saving fails.


2010-11-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c:
   Check result of fclose() for utils_write_file().


2010-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * win32-config.h:
   Enable GIO and built-in regex support on Windows
   when compiling without Waf.


2010-11-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany_private.rc:
   Reformat and improve the Windows resource file.


2010-11-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetype_extensions.conf:
   Add *.latex pattern.
 * src/interface.c, geany.glade:
   Add note to indentation prefs page about using Project->Apply
   Default Indentation for currently open documents.


2010-11-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/keybindings.c, src/callbacks.c,
   src/callbacks.h, geany.glade:
   Add 'Mark All' Search menu command.
 * src/symbols.c, doc/geany.txt, doc/geany.html:
   If the current word's tag is on the current line, make Go to Tag
   Definition look for a tag declaration instead, as this is more
   useful. Likewise make Go to Tag Declaration search for a tag
   definition in this case also.
 * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
   Don't use 'Enable' in pref labels when unnecessary.
   Rename XML/HTML tag autocompletion -> auto-closing.
 * src/keyfile.c, src/document.c, src/document.h, doc/geany.txt,